configurando la logica para implemntar las excepciones en los metodos de shoppingCart